Add Stealth, UE versions & changelog scraping
Improve scraping reliability and enrich product notifications: add Playwright stealth support (playwright-stealth) and browser launch args to bypass Cloudflare/CAPTCHA, extract Supported Unreal Engine versions and automated changelog entries from product pages, and include these fields in product payloads. Update Discord embed layout to show UE versions and a filtered changelog entry, refine reviews/default handling and description trimming. Bump package version to 2.0.0, add new language keys (en/fr), update README with features/commands and install notes, add playwright-stealth to requirements, and make requirement parsing in run.py more robust (skip comments/empty lines and simple package name parsing).

--- a/requirements.txt
+++ b/requirements.txt
@@ -19,5 +19,8 @@ PyVirtualDisplay>=3.0
 # Timezone data (required for Windows)
 tzdata
 
+# Stealth
+playwright-stealth>=1.0.0
+
 # Timezone support (built-in since Python 3.9)
 # zoneinfo is in stdlib
